Update Swagger pointer that had embedded URL...

--- a/services/Demo.WebUI/Views/Weather/Index.cshtml
+++ b/services/Demo.WebUI/Views/Weather/Index.cshtml
@@ -36,8 +36,8 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col" align="left">Type</th>
-                <th scope="col" align="left">Value</th>
+                <th scope="col" style="text-align: left">Type</th>
+                <th scope="col" style="text-align: left">Value</th>
             </tr>
         </thead>
         <tbody>
