--- a/services/Demo.WebUI/Views/Home/Index.cshtml
+++ b/services/Demo.WebUI/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col" align="left">Type</th>
-                <th scope="col" align="left">Value</th>
+                <th scope="col" style="text-align: left">Type</th>
+                <th scope="col" style="text-align: left">Value</th>
             </tr>
         </thead>
         <tbody>
